# change

./: CMakeLists.txt  LICENSE  README.md  change  change_log.cc  io.h  utility.h
src/: actual.h  actual_function.h  bootstrap.cc  change_log.cc  change_tracker.cc  change_tracker.h  io.h  main.cc  utility.h
src/filter/: gvim.filter  nvim.filter  vim.filter
src/init/: alloc.cc  alloc.h
src/tracking/: change_tracker.cc  change_tracker.h  path_matcher.cc  path_matcher.h
src/utility/: io.cc  io.h  logger.cc  logger.h
